--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
+  "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "prettier": "npx --yes -p prettier@latest -p pretty-quick pretty-quick"
   },
   "dependencies": {
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.9.0"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.4",
+    "prettier-plugin-organize-imports": "^3.2.2"
   }
 }
