--- a/app.yaml
+++ b/app.yaml
@@ -3,6 +3,6 @@ env: standard
 instance_class: F1
 automatic_scaling:
   min_idle_instances: automatic
-  max_idle_instances: 1
+  max_idle_instances: automatic
   min_pending_latency: automatic
-  max_pending_latency: 1
+  max_pending_latency: automatic
