--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,7 @@
 runtime: nodejs18
 env: standard
 instance_class: F1
+service: kolkoikrzyzyksrv
 automatic_scaling:
   min_idle_instances: automatic
   max_idle_instances: automatic
