--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@google-cloud/logging": "^10.4.0",
     "@google-cloud/logging-winston": "^5.3.0",
+    "@prisma/client": "^4.10.1",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "prettier": "^2.8.4",
-    "prettier-plugin-organize-imports": "^3.2.2"
+    "prettier-plugin-organize-imports": "^3.2.2",
+    "prisma": "^4.10.1"
   }
 }
